Fix modal window overflow

--- a/css/style.css
+++ b/css/style.css
@@ -434,12 +434,15 @@ body {
   padding: 0 20px;
   transform: translateY(100%);
   z-index: 1;
+  overflow: hidden;
 }
 .translate-up {
+  opacity: 1;
   transform: translateY(0%);
   transition: transform 0.2s;
 }
 .translate-down {
+  opacity: 0;
   transform: translateY(100%);
   transition: transform 0.2s;
 }
